# CS138-RL-TicketPricing-Agent

./: README.md  pyproject.toml  run_visualization.ps1  run_visualization.sh
.history/: plot_demand_curve_20251130200519.py  plot_demand_curve_20251130200643.py  run_training_20251202205911.ps1  run_training_20251203220649.ps1  run_training_20251203220651.ps1  run_visualization_20251202205922.ps1  run_visualization_20251203220703.ps1
learning_environment/: README.md  README_TRAINING.md  generate_env_demand_graphs.py  generate_paper_graphs.py  plot_3d_demand_curves.py  plot_avg_sale_price_by_time.py  plot_demand_curve.py  plot_training_curves.py  train_headless.py
learning_environment/agents/: README.md  base_agent.py  dqn_agent.py  tabular_q_agent.py
learning_environment/checkpoints/: README.md  dqn_ticket_pricing.pt  episode_metadata.json
learning_environment/data_generation/: README.md  create_seat_quality_table.py  import_seat_quality_from_csv.py  seat_quality.csv  update_ticket_sales_quality.py
learning_environment/demand_modeling/: README.md  __init__.py  data_extractor.py  demand_fitter.py  feature_engineer.py  model_serializer.py  plot_3d_price_prob_time.py  train_model.py
learning_environment/env/: README.md  feature_builder.py  ticket_pricing_env.py
learning_environment/models/: README.md  demand_model_v12_anti_gouge.json  demand_model_v12_anti_gouge.pkl
learning_environment/plots/: README.md  training_metrics.json
learning_environment/visualization/: README.md  __init__.py  app.py  data_helpers.py  renderer.py  run_visualization.py  ui_style.py
(+55 files in other folders)
